# ImageEditor

./: CMakeLists.txt  editor_plugin_interface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
AffinePlugin/: CMakeLists.txt  affine_plugin.cpp  affine_plugin.h
BlurPlugin/: CMakeLists.txt  blur_plugin.cpp  blur_plugin.h
CartoonPlugin/: CMakeLists.txt  cartoon_plugin.cpp  cartoon_plugin.h
ErodePlugin/: CMakeLists.txt  erode_plugin.h
RotatePlugin/: CMakeLists.txt  rotate_plugin.cpp  rotate_plugin.h
SharpenPlugin/: CMakeLists.txt  sharpen_plugin.cpp  sharpen_plugin.h
